# project

test_pkg/: CMakeLists.txt  main_window(1).cpp  package.xml
test_pkg/config/: test1.yaml
test_pkg/dep/LogOutput/: CMakeLists.txt  folder_struct.txt
test_pkg/dep/LogOutput/core_base/: CMakeLists.txt  appdata.h  iconhelper.h  quihelper.cpp  quihelper.h
test_pkg/dep/LogOutput/core_dataout/: CMakeLists.txt  core_dataout.pri  datacsv.cpp  datacsv.h  datahelper.cpp  datahelper.h  dataother.cpp  dataother.h  dataprint.cpp  datareport.cpp  datareport.h  datastruct.h  dataxls.cpp
test_pkg/dep/LogOutput/dataout/: CMakeLists.txt  dataout.pro
test_pkg/dep/LogOutput/dataout/app/: app.pri  appconfig.cpp  appconfig.h
test_pkg/dep/OutputWidget/: CMakeLists.txt  OutputWidget.cpp  OutputWidget.h
test_pkg/include/: LSFP.h  main.h  toyaml.h
test_pkg/launch/: automaove.launch  display.rviz  flat_c2w.launch  main_window.launch  mtc_c2w.launch
test_pkg/log/: 检测结果.csv
test_pkg/log/平面度检测/: .平面度检测.json
test_pkg/log/平面度检测_2025_02-21_16:31_47/: .平面度检测_2025_02-21_16:31_47.json
test_pkg/log/平面度检测_2025_02-21_16:32_42/: .平面度检测_2025_02-21_16:32_42.json
test_pkg/msg/: planeToleranceMsg.msg
test_pkg/src/: detect_automove.cpp  main_quadruple_cam_c2w.cpp  main_window.cpp  plane_extrin_calibration_c2w.cpp
